[tool.poetry]
name = "scru160"
version = "0.2.3"
description = "SCRU160: Sortable, Clock and Random number-based Unique identifier"
license = "Apache-2.0"
authors = ["LiosK <contact@mail.liosk.net>"]
readme = "README.md"
homepage = "https://github.com/scru160/python"
keywords = ["identifier", "uuid", "guid", "ulid", "ksuid"]
classifiers = ["Operating System :: OS Independent"]

[tool.poetry.scripts]
scru160 = "scru160.cli:generate"
scru160-inspect = "scru160.cli:inspect"

[tool.poetry.dependencies]
python = "^3.7.12"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
